# molterm

./: .gitignore  .mcp.json  CMakeLists.txt  README.md  THIRDPARTY.md
.github/workflows/: publish-mcp.yml  release.yml  test.yml
docs/: COMMANDS.md  ROADMAP.md  SCRIPTING.md  SELECTIONS.md
include/molterm/analysis/: ContactMap.h
include/molterm/app/: Application.h  CommandScope.h  FocusState.h  InterfaceOverlay.h  OverlayAnnotations.h  PathPatterns.h  ScriptRunner.h  Tab.h  TabManager.h  TabViewState.h  ViewSettings.h
include/molterm/cmd/: CommandHelpers.h  CommandParser.h  CommandRegistry.h  ExprContext.h  Register.h  RegisterExpr.h  UndoStack.h
include/molterm/cmd/commands/: Commands.h
include/molterm/config/: ConfigParser.h
include/molterm/core/: AtomData.h  BondData.h  BondTable.h  DSSP.h  Geometry.h  Logger.h  MolObject.h  ObjectStore.h  SASA.h  Selection.h  SpatialHash.h  StringParse.h  VdwTable.h
include/molterm/input/: Action.h  InputHandler.h  Keymap.h  KeymapManager.h  Mode.h
include/molterm/io/: Aligner.h  CcdCache.h  CifLoader.h  PdbWriter.h  SessionExporter.h  SessionSaver.h
include/molterm/render/: AsciiCanvas.h  AsciiRenderer.h  Base64.h  BlockCanvas.h  BrailleCanvas.h  Camera.h  Canvas.h  ColorMapper.h  DepthBuffer.h  GraphicsEncoder.h  ITermEncoder.h  KittyEncoder.h  OutlineMode.h  PixelCanvas.h  ProtocolPicker.h  Renderer.h  SixelCanvas.h  SixelEncoder.h  StereoMode.h  ZoomGate.h
include/molterm/repr/: BackboneRepr.h  BallStickRepr.h  CartoonRepr.h  InterfaceRepr.h  ReprUtil.h  Representation.h  RibbonRepr.h  SpacefillRepr.h  SurfaceRepr.h  WireframeRepr.h
include/molterm/tui/: CommandLine.h  Constraint.h  ContactMapPanel.h  DensityMap.h  Layout.h  ObjectPanel.h  Screen.h  SeqBar.h  StatusBar.h  TabBar.h  Widget.h  Window.h
lib/: README.md  ab_elbow.mt  dna_bend.mt  domain_hinge.mt  helix_kink.mt  kinase_state.mt  phi_psi.mt  residue_scan.mt  tcr_angles.mt
mcp/: .gitignore  README.md  package-lock.json  package.json
mcp/scripts/: postinstall.mjs
mcp/src/: index.ts  molterm.ts
resources/: embed_font.cmake
scripts/: render-all.sh  update.sh
src/: main.cpp
src/analysis/: ContactMap.cpp
src/app/: Application.cpp  Application_Focus.cpp  Application_Input.cpp  Application_Render.cpp  CommandScope.cpp  PathPatterns.cpp  ScriptRunner.cpp  Tab.cpp  TabManager.cpp
src/cmd/: CommandHelpers.cpp  CommandParser.cpp  CommandRegistry.cpp  ExprContext.cpp  Register.cpp  RegisterExpr.cpp  UndoStack.cpp
src/cmd/commands/: Alignment.cpp  Annotation.cpp  Display.cpp  Fetch.cpp  Files.cpp  Measurement.cpp  Objects.cpp  Scripting.cpp  Selection.cpp  Session.cpp  Settings.cpp  View.cpp
src/config/: ConfigParser.cpp
src/core/: BondTable.cpp  DSSP.cpp  Geometry.cpp  Logger.cpp  MolObject.cpp  ObjectStore.cpp  SASA.cpp  Selection.cpp  StringParse.cpp
src/input/: InputHandler.cpp  Keymap.cpp  KeymapManager.cpp
src/io/: Aligner.cpp  CcdCache.cpp  CifLoader.cpp  PdbWriter.cpp  SessionExporter.cpp  SessionSaver.cpp
src/render/: AsciiCanvas.cpp  AsciiRenderer.cpp  BlockCanvas.cpp  BrailleCanvas.cpp  Camera.cpp  Canvas.cpp  ColorMapper.cpp  ITermEncoder.cpp  KittyEncoder.cpp  PixelCanvas.cpp  ProtocolPicker.cpp  SixelCanvas.cpp  SixelEncoder.cpp
src/repr/: BackboneRepr.cpp  BallStickRepr.cpp  CartoonRepr.cpp  InterfaceRepr.cpp  Representation.cpp  RibbonRepr.cpp  SpacefillRepr.cpp  SurfaceRepr.cpp  WireframeRepr.cpp
src/tui/: CommandLine.cpp  Constraint.cpp  ContactMapPanel.cpp  DensityMap.cpp  Layout.cpp  ObjectPanel.cpp  Screen.cpp  SeqBar.cpp  StatusBar.cpp  TabBar.cpp  Window.cpp
tests/: CMakeLists.txt  test_constraint.cpp  test_dssp.cpp  test_geometry.cpp  test_register_expr.cpp  test_sasa.cpp  test_script.sh  test_selection.cpp
